@@ -9,11 +9,14 @@ UNRELEASED
       fixes #90
     * FIX: Stop bytes sent/received debug on node 0.12 when socket closes
     * test: Test on only 3 browsers in travis
+      fixes #61
     * test: split desktop/mobile into a travis matrix, reduces travis timeouts
     * feat: add client.batch()
     * feature: getObjects now accepts attributesToRetrieve:
       signature: getObjects(objectIDs, attributesToRetrieve, callback)
     * fix: send `x-algolia-agent` instead of `x-user-agent`
+    * fix: clone cached results hits sent
+      fixes #79
 
 2015-05-14  3.3.2
     * FIX: more fixes to the use of $q() in the angular build, now compatible with 1.2.xx and tested
